--- a/scai/hmemo/examples/mic/Makefile
+++ b/scai/hmemo/examples/mic/Makefile
@@ -15,7 +15,7 @@ EXECUTABLE: ${EXECUTABLES_MIC}
 	${CXX} -o $*.exe $*.o ${LD_FLAGS}
 	
 .cpp.o:
-	${CXX} ${CXX_FLAGS} ${INCLUDE_FLAGS} -c $*.cpp
+	${CXX} ${CXX_FLAGS} ${SCAI_DEFINES} ${INCLUDE_FLAGS} -c $*.cpp
 
 clean:
 	rm -rf *.exe *.o
