--- a/scai/hmemo/examples/cuda/Makefile
+++ b/scai/hmemo/examples/cuda/Makefile
@@ -2,7 +2,7 @@ include ../make.inc
 
 INCLUDE_FLAGS = -I${SCAI_BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include -I${SCAI_CUDA_INCLUDE_DIR}
 
-LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
+LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib:${SCAI_CUDA_LIBRARY_PATH}
 
 EXECUTABLE: ${EXECUTABLES_CUDA}
 
@@ -16,10 +16,10 @@ EXECUTABLE: ${EXECUTABLES_CUDA}
 	${CXX} -o $*.exe $*.o ${LD_FLAGS}
 	
 .cpp.o:
-	${CXX} ${CXX_FLAGS} ${INCLUDE_FLAGS} -c $*.cpp
+	${CXX} ${CXX_FLAGS} ${SCAI_DEFINES} ${INCLUDE_FLAGS} -c $*.cpp
 	
 .cu.o:
-	${CXX_CUDA} ${CXX_CUDA_FLAGS} ${INCLUDE_FLAGS} -c $*.cu
+	${CXX_CUDA} ${CXX_CUDA_FLAGS} ${SCAI_DEFINES} ${INCLUDE_FLAGS} -c $*.cu
 
 clean:
 	rm -rf *.exe *.o
