--- a/scai/hmemo/examples/make.inc.in
+++ b/scai/hmemo/examples/make.inc.in
@@ -33,10 +33,12 @@
 SCAI_ROOT=${CMAKE_INSTALL_PREFIX}
 SCAI_BOOST_INCLUDE_DIR=${SCAI_BOOST_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
-CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DSCAI_TRACE_OFF -DSCAI_LOG_LEVEL_DEBUG -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
+CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}
 CXX_CUDA=${CUDA_NVCC_EXECUTABLE}
 CXX_CUDA_FLAGS=${CUDA_NVCC_FLAGS_CLEAN}
+SCAI_DEFINES=-DSCAI_TRACE_OFF -DSCAI_LOG_LEVEL_DEBUG -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 SCAI_CUDA_INCLUDE_DIR=${SCAI_CUDA_INCLUDE_DIR}
+SCAI_CUDA_LIBRARY_PATH=${SCAI_CUDA_LIBRARY_PATH}
 SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
 EXECUTABLES=${EXAMPLE_EXECUTABLES}
 EXECUTABLES_CUDA=${EXAMPLE_EXECUTABLES_CUDA}
