--- a/scai/logging/examples/CMakeLists.txt
+++ b/scai/logging/examples/CMakeLists.txt
@@ -35,6 +35,8 @@
 # LogLevels example, here we compile also LOG_TRACE macros
 
 add_executable( LogLevels.exe LogLevels.cpp )
+set ( EXAMPLE_FILES ${EXAMPLE_FILES} LogLevels.cpp )
+set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} LogLevels.exe" )
 target_link_libraries( LogLevels.exe ${PROJECT_NAME} )
 set_target_properties( LogLevels.exe PROPERTIES COMPILE_FLAGS -DSCAI_LOG_LEVEL_TRACE )
 
@@ -55,16 +57,17 @@ if    ( OPENMP_FOUND )
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     # Adding this example only possible if OpenMP is available
     add_executable( LogOpenMP.exe LogOpenMP.cpp )
+    set ( EXAMPLE_FILES ${EXAMPLE_FILES} LogOpenMP.cpp )
+    set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} LogOpenMP.exe" )
     target_link_libraries( LogOpenMP.exe ${PROJECT_NAME} )
 else  ( OPENMP_FOUND )
     message ( STATUS "LogOpenMP example not built, no compiler option found" )
 endif ( OPENMP_FOUND )
 
-set ( EXAMPLE_EXECUTABLES "LogLevels.exe LogOpenMP.exe" )
+file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 
 ## install examples
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
-file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
-install ( DIRECTORY ./ DESTINATION ${PROJECT_EXAMPLE_DIR} FILES_MATCHING PATTERN "*.cpp" )
+install ( FILES ${EXAMPLE_FILES} DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( FILES config Makefile ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( PROGRAMS run_all.sh DESTINATION ${PROJECT_EXAMPLE_DIR} )
