--- a/scai/tracing/examples/CMakeLists.txt
+++ b/scai/tracing/examples/CMakeLists.txt
@@ -37,12 +37,14 @@ add_definitions( -DSCAI_TRACE_ON )
 foreach ( executable TraceTest TraceCalls TraceThreads )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
+    set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
+file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
+
 ## install examples
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
-file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
-install ( DIRECTORY ./ DESTINATION ${PROJECT_EXAMPLE_DIR} FILES_MATCHING PATTERN "*.cpp" )
+install ( FILES ${EXAMPLE_FILES} DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( FILES Makefile ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( PROGRAMS run_all.sh DESTINATION ${PROJECT_EXAMPLE_DIR} )
