corrections to utilskernel header, found with examples

--- a/scai/utilskernel/examples/make.inc.in
+++ b/scai/utilskernel/examples/make.inc.in
@@ -22,7 +22,7 @@
 # AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-# SOFTWARE.
+# SOFTWARE.cd 
 # @endlicense
 #
 # @brief Definition of variables that will be include in each Makefile of examples
@@ -39,7 +39,7 @@ CXX_CUDA_FLAGS=${CUDA_NVCC_FLAGS_CLEAN}
 SCAI_DEFINES=-DSCAI_TRACE_OFF -DSCAI_LOG_LEVEL_DEBUG -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 SCAI_CUDA_INCLUDE_DIR=${SCAI_CUDA_INCLUDE_DIR}
 SCAI_CUDA_LIBRARY_PATH=${SCAI_CUDA_LIBRARY_PATH}
-SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
+SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_utilskernel -lscai_kregistry -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
 EXECUTABLES=${EXAMPLE_EXECUTABLES}
 EXECUTABLES_CUDA=${EXAMPLE_EXECUTABLES_CUDA}
 EXECUTABLES_MIC=${EXAMPLE_EXECUTABLES_MIC}
