--- a/scai/utilskernel/CMakeLists.txt
+++ b/scai/utilskernel/CMakeLists.txt
@@ -105,6 +105,7 @@ scai_project (
 
     HEADERS                  # .hpp only
 
+        LAMAKernel
         LArray
         LArrayRef
         UtilKernelTrait
