--- a/scai/lama/examples/make.inc.in
+++ b/scai/lama/examples/make.inc.in
@@ -34,7 +34,7 @@ SCAI_ROOT=${CMAKE_INSTALL_PREFIX}
 SCAI_BOOST_INCLUDE_DIR=${SCAI_BOOST_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -D${SCAI_LOGGING_FLAG} -D${SCAI_TRACING_FLAG} -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
-SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_solver -lscai_lama -lscai_dmemo -lscai_sparsekernel -lscai_utilskernel -lscai_blaskernel -lscai_tasking -lscai_hmemo -lscai_tracing -lscai_logging -lscai_common
+SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_lama -lscai_dmemo -lscai_sparsekernel -lscai_utilskernel -lscai_blaskernel -lscai_kregistry -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
 EXECUTABLES_BENCH=${EXAMPLE_EXECUTABLES_BENCH}
 EXECUTABLES_LABELRANK=${EXAMPLE_EXECUTABLES_LABELRANK}
 EXECUTABLES_TUTORIAL=${EXAMPLE_EXECUTABLES_TUTORIAL}
