--- a/scai/examples_make.inc.in
+++ b/scai/examples_make.inc.in
@@ -26,18 +26,26 @@
 # @endlicense
 #
 # @brief Definition of variables that will be include in each Makefile of examples
-# @author Thomas Brandes
-# @date 15.05.2013
+# @author Lauretta Schubert
+# @date 02.03.2016
 ##
 
 SCAI_ROOT=${CMAKE_INSTALL_PREFIX}
 SCAI_BOOST_INCLUDE_DIR=${SCAI_BOOST_INCLUDE_DIR}
+SCAI_CUDA_INCLUDE_DIR=${SCAI_CUDA_INCLUDE_DIR}
+
 CXX=${CMAKE_CXX_COMPILER}
-CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DSCAI_TRACE_OFF -DSCAI_LOG_LEVEL_DEBUG -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 CXX_CUDA=${CUDA_NVCC_EXECUTABLE}
+
+CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}
 CXX_CUDA_FLAGS=${CUDA_NVCC_FLAGS_CLEAN}
-CUDA_TOOLKIT_INCLUDE=${CUDA_TOOLKIT_INCLUDE}
-SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_dmemo -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
+
+SCAI_DEFINES=${SCAI_DEFINES}
+
+SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib ${SCAI_EXAMPLE_LINK_LIBRARIES}
+
+SCAI_CUDA_LIBRARY_PATH=${SCAI_CUDA_LIBRARY_PATH}
+
 EXECUTABLES=${EXAMPLE_EXECUTABLES}
 EXECUTABLES_CUDA=${EXAMPLE_EXECUTABLES_CUDA}
 EXECUTABLES_MIC=${EXAMPLE_EXECUTABLES_MIC}
