--- a/scai/lama/examples/bench/CMakeLists.txt
+++ b/scai/lama/examples/bench/CMakeLists.txt
@@ -33,12 +33,14 @@
 foreach ( executable conversion matadd matmul )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
-    set ( EXAMPLE_FILES_BENCH ${EXAMPLE_FILES_BENCH} ${executable}.cpp )
-    set ( EXAMPLE_EXECUTABLES_BENCH "${EXAMPLE_EXECUTABLES_BENCH} ${executable}.exe" )
+    set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
+    set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
-#install examples
-install ( FILES ${EXAMPLE_FILES_BENCH} DESTINATION ${PROJECT_EXAMPLE_DIR}/bench )
-install ( FILES Makefile DESTINATION ${PROJECT_EXAMPLE_DIR}/bench )
+# configure make.inc for examples
+include ( Functions/prepareExamplesMakeInc )
+prepareExamplesMakeInc()
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
 
-set ( EXAMPLE_EXECUTABLES_BENCH "${EXAMPLE_EXECUTABLES_BENCH}" PARENT_SCOPE )
+#install examples
+install ( FILES ${EXAMPLE_FILES} Makefile ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR}/bench )
