--- a/scai/solver/examples/solver/Makefile
+++ b/scai/solver/examples/solver/Makefile
@@ -1,10 +1,10 @@
-include ../make.inc
+include make.inc
 
 INCLUDE_FLAGS = -I${SCAI_BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: ${EXECUTABLES_SOLVER}
+EXECUTABLE: ${EXECUTABLES}
 
 cg_solver.exe: LamaConfig.hpp
 jacobi_solver.exe: LamaConfig.hpp
@@ -19,7 +19,7 @@ amg_solver.exe: LamaConfig.hpp
 	${CXX} -o $*.exe $*.o ${LD_FLAGS} 
 
 .cpp.o:
-	${CXX} ${CXX_FLAGS} ${INCLUDE_FLAGS} -c $*.cpp
+	${CXX} -fPIC ${CXX_FLAGS}  ${SCAI_DEFINES} ${INCLUDE_FLAGS} -c $*.cpp
 
 clean:
 	rm -rf *.exe *.o *.frm *.frv *.amg *.vec *.trace
