--- a/scai/solver/examples/spy/Makefile
+++ b/scai/solver/examples/spy/Makefile
@@ -1,10 +1,10 @@
-include ../make.inc
+include make.inc
 
 INCLUDE_FLAGS = -I${SCAI_BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib -lpng
 
-EXECUTABLE: ${EXECUTABLES_SPY}
+EXECUTABLE: ${EXECUTABLES}
 
 spy.exe: Bitmap.hpp
 amg_spy.exe: Bitmap.hpp
@@ -18,7 +18,7 @@ amg_spy.exe: Bitmap.hpp
 	${CXX} -o $*.exe $*.o ${LD_FLAGS} 
 
 .cpp.o:
-	${CXX} ${CXX_FLAGS} ${INCLUDE_FLAGS} -c $*.cpp
+	${CXX} -fPIC ${CXX_FLAGS} ${SCAI_DEFINES} ${INCLUDE_FLAGS} -c $*.cpp
 
 clean:
 	rm -rf *.exe *.o *.frm *.frv *.amg *.vec *.trace
