--- a/scai/examples_make.inc.in
+++ b/scai/examples_make.inc.in
@@ -47,5 +47,4 @@ SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib ${SCAI_EXAMPLE_LI
 SCAI_CUDA_LIBRARY_PATH=${SCAI_CUDA_LIBRARY_PATH}
 
 EXECUTABLES=${EXAMPLE_EXECUTABLES}
-EXECUTABLES_CUDA=${EXAMPLE_EXECUTABLES_CUDA}
-EXECUTABLES_MIC=${EXAMPLE_EXECUTABLES_MIC}
+MODULES=${EXAMPLE_MODULES}
