--- a/scai/solver/examples/lecture/CMakeLists.txt
+++ b/scai/solver/examples/lecture/CMakeLists.txt
@@ -43,5 +43,9 @@ prepareExamplesMakeInc()
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
 
 #install examples
-install ( FILES ${EXAMPLE_FILES} Makefile ${CMAKE_CURRENT_BINARY_DIR}/make.inc gr_30_30.mtx log_config
+install ( FILES ${EXAMPLE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/make.inc gr_30_30.mtx log_config
 		  DESTINATION ${PROJECT_EXAMPLE_DIR}/lecture )
+
+# install Makefile
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_Makefile.in"
+				 "${CMAKE_INSTALL_PREFIX}/${PROJECT_EXAMPLE_DIR}/lecture/Makefile" COPYONLY )
