--- a/scai/utilskernel/doc/CMakeLists.txt
+++ b/scai/utilskernel/doc/CMakeLists.txt
@@ -37,8 +37,8 @@ if ( SPHINX_FOUND AND BUILD_DOC )
 
     # Sphinx configuration file conf.py will be generated with correct LAMA version, copyright, etc.
     # must be in same directory as Sphinx source files
-    setIntersphinxInternalVariables()    
-    configure_file ( "${CMAKE_SOURCE_DIR}/doc/conf.py.in" "${CMAKE_CURRENT_BINARY_DIR}/conf.py" )
+    setIntersphinxInternalVariables()
+    configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../conf.py.in" "${CMAKE_CURRENT_BINARY_DIR}/conf.py" )
     
     # Add custom command for building the userdoc
     add_custom_command (
