small correction for central Makefile

--- a/scai/examples_Makefile.in
+++ b/scai/examples_Makefile.in
@@ -1,6 +1,14 @@
 include make.inc
 
-INCLUDE_FLAGS = -I${SCAI_BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
+ifdef SCAI_BOOST_INCLUDE_DIR
+    BOOST_INCLUDE = -I${SCAI_BOOST_INCLUDE_DIR}
+endif
+
+ifdef SCAI_CUDA_INCLUDE_DIR
+    CUDA_INCLUDE = -I${SCAI_CUDA_INCLUDE_DIR}
+endif
+
+INCLUDE_FLAGS = -I${SCAI_ROOT}/include ${BOOST_INCLUDE} ${CUDA_INCLUDE}
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
