--- a/scai/hmemo/examples/mic/CMakeLists.txt
+++ b/scai/hmemo/examples/mic/CMakeLists.txt
@@ -35,10 +35,13 @@
 #   - include_directories are taken over from project
 #
 
+set ( EXAMPLE_FILES "" )
+set ( EXAMPLE_EXECUTABLES "" )
+
 foreach ( executable MICExample1 )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
-    set ( EXAMPLE_FILES_MIC ${EXAMPLE_FILES_MIC} ${executable}.cpp )
+    set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
@@ -48,7 +51,7 @@ prepareExamplesMakeInc()
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../../examples_make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
 
 ## install examples
-install ( FILES ${EXAMPLE_FILES_MIC} ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR}/mic )
+install ( FILES ${EXAMPLE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR}/mic )
 
 # install Makefile
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../examples_Makefile.in"
