added additional link libraries to central makefile, added for spy examples (solver)

--- a/scai/examples_Makefile.in
+++ b/scai/examples_Makefile.in
@@ -10,7 +10,11 @@ endif
 
 INCLUDE_FLAGS = -I${SCAI_ROOT}/include ${BOOST_INCLUDE} ${CUDA_INCLUDE}
 
-LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib:${SCAI_CUDA_LIBRARY_PATH}
+ifdef ADDITIONAL_EXAMPLE_LINK_LIBRARIES
+	LINK_LIBRARY = -l${ADDITIONAL_EXAMPLE_LINK_LIBRARIES}
+endif
+
+LD_FLAGS = ${SCAI_LD_FLAGS} ${LINK_LIBRARY} -Wl,-rpath=${SCAI_ROOT}/lib:${SCAI_CUDA_LIBRARY_PATH}
 
 EXECUTABLE: ${EXECUTABLES} ${MODULES}
 
