CUDA common examples has no modules, must be set explicitly

--- a/scai/common/examples/cuda/CMakeLists.txt
+++ b/scai/common/examples/cuda/CMakeLists.txt
@@ -34,6 +34,7 @@
 
 set ( EXAMPLE_FILES "" )
 set ( EXAMPLE_EXECUTABLES "" )
+set ( EXAMPLE_MODULES "" ) # for make.inc
 
 string (REPLACE ";" " " CUDA_NVCC_FLAGS_CLEAN "${CUDA_NVCC_FLAGS}")
 
