renamed macros/loop.hpp to macros/typeloop.hpp, added header to CMakeLists.txt

--- a/scai/common/macros/CMakeLists.txt
+++ b/scai/common/macros/CMakeLists.txt
@@ -36,7 +36,10 @@ scai_project(
 
         assert
         inline
+	instantiate
+	print_string
         throw
+	typeloop
         unique_name
         unused
 
